Ignore own libs

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-GROUP=com.jaredsburrows
-VERSION_NAME=0.8.7-SNAPSHOT
+GROUP=com.volvocars.artinf.sdk
+VERSION_NAME=1.0
 
 POM_NAME=Gradle License Plugin
 POM_ARTIFACT_ID=gradle-license-plugin
